substituicao de ArrayList por LinkedList